feat: shadcn common ui registry setup

--- a/src/components/markdown/installation-tabs/installation-tabs.astro
+++ b/src/components/markdown/installation-tabs/installation-tabs.astro
@@ -2,7 +2,7 @@
 import { Code } from "@astrojs/starlight/components"
 import { InstallationTabsInternal } from "./_installation-tabs-internal"
 import CliCommandCode from "@/components/markdown/cli-command-code/cli-command-code.astro"
-import { SERVER_URL } from "@/data/env"
+import { SERVER_URL } from "../../../../environment.js"
 import { ManualInstallCodeCard } from "@/components/manual-install-code-card"
 
 interface RegistryItemSchema {
